--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -33,6 +33,7 @@
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="bloodType" styleClass="cell_small_label" text="\$blood type" />
+      <Label fx:id="nextOfKin" styleClass="cell_small_label" text="\$next of kin" />
     </VBox>
   </GridPane>
 </HBox>
