--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -30,6 +30,7 @@
       <FlowPane fx:id="tags" />
       <FlowPane fx:id="checkups" />
       <Label fx:id="appointment" styleClass="cell_small_label" text="\$appointment" />
+      <Label fx:id="dob" styleClass="cell_small_label" text="\$dob" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
