--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -18,3 +18,12 @@
 .tooltip-text {
     -fx-text-fill: white;
 }
+
+.tag-nurse {
+    -fx-background-color: #4CAF50;
+    -fx-text-fill: #000000;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
