--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -1,19 +1,19 @@
 #copyButton, #helpMessage {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 #copyButton {
-    -fx-background-color: dimgray;
+    -fx-background-color: #a896b6;
 }
 
 #copyButton:hover {
-    -fx-background-color: gray;
+    -fx-background-color: white;
 }
 
 #copyButton:armed {
-    -fx-background-color: darkgray;
+    -fx-background-color: white;
 }
 
 #helpMessageContainer {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: white;
 }
