--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -336,29 +336,6 @@
     -fx-vgap: 3;
 }
 
-#tags .label {
-    -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
-    -fx-font-size: 11;
-}
-
-#checkups {
-    -fx-hgap: 7;
-    -fx-vgap: 3;
-}
-
-#checkups .label {
-    -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
-    -fx-font-size: 11;
-}
-
 .split-pane:vertical > .split-pane-divider {
     -fx-background-color: transparent;
     -fx-padding: 0;
@@ -451,3 +428,48 @@
     -fx-background-color: linear-gradient(to bottom, #e8e8e8, #cfcfcf);
 }
 
+.nurse {
+    -fx-background-color: #FF7F50;
+    -fx-text-fill: white;
+    -fx-padding: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-border-color: darkorange;
+    -fx-border-width: 1px;
+}
+
+.patient {
+    -fx-background-color: #87CEEB;
+    -fx-text-fill: white;
+    -fx-padding: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-border-color: steelblue;
+    -fx-border-width: 1px;
+}
+
+.checkup-label {
+    -fx-background-color: lightgray;
+    -fx-padding: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-border-width: 1px;
+    -fx-text-fill: black;
+}
+
+.tags-label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10;
+    -fx-border-width: 1px;
+}
+
+.tags-nurse-label {
+    -fx-background-color: #4CAF50;
+    -fx-text-fill: #000000;
+    -fx-padding: 5px;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10px;
+}
