--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -14,9 +14,9 @@
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0" spacing="5">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets top="10" right="5" bottom="10" left="15" />
       </padding>
       <HBox spacing="5" alignment="CENTER_LEFT">
         <Label fx:id="id" styleClass="cell_big_label">
@@ -27,14 +27,14 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="tags" />
+      <Label fx:id="appointment" text="\$appointment" />
       <FlowPane fx:id="checkups" />
-      <Label fx:id="appointment" styleClass="cell_small_label" text="\$appointment" />
-      <Label fx:id="dob" styleClass="cell_small_label" text="\$dob" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="bloodType" styleClass="cell_small_label" text="\$blood type" />
+      <FlowPane fx:id="tags" />
+      <Label fx:id="dob" styleClass="cell_small_label" />
+      <Label fx:id="phone" styleClass="cell_small_label" />
+      <Label fx:id="address" styleClass="cell_small_label" />
+      <Label fx:id="email" styleClass="cell_small_label" />
+      <Label fx:id="bloodType" styleClass="cell_small_label" />
       <Label fx:id="nextOfKin" styleClass="cell_small_label" text="\$next of kin" />
     </VBox>
   </GridPane>
