Edit GUI and add test cases

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -88,10 +88,11 @@
 }
 
 .list-view {
-    -fx-background-insets: 0;
-    -fx-padding: 0;
     -fx-background-color: #573b9c;
-    -fx-background-radius: 12;
+    -fx-control-inner-background: white;
+    -fx-padding: 0;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
 }
 
 .list-cell {
@@ -115,6 +116,20 @@
 .list-cell:filled:selected #cardPane {
     -fx-border-color: #4a68e8;
     -fx-border-width: 1;
+}
+
+.list-cell:empty {
+    -fx-background-color: #fafafa;
+    -fx-background-radius: 0;
+    -fx-border-radius: 0;
+    -fx-shape: " ";
+    -fx-padding: 0;
+}
+
+.rounded-list .list-cell:empty {
+    -fx-background-color: white;
+    -fx-background-radius: 0;
+    -fx-border-radius: 0;
 }
 
 .list-cell .label {
@@ -273,31 +288,33 @@
     -fx-text-fill: white;
 }
 
+/* Light-themed Scrollbar */
 .scroll-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: transparent;
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#1d1d1d, 50%);
-    -fx-background-insets: 3;
+    -fx-background-color: #cccccc;
+    -fx-background-insets: 0;
+    -fx-background-radius: 5;
 }
 
-.scroll-bar .increment-button, .scroll-bar .decrement-button {
+.scroll-bar .thumb:hover {
+    -fx-background-color: #aaaaaa;
+}
+
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button {
     -fx-background-color: transparent;
-    -fx-padding: 0 0 0 0;
+    -fx-padding: 0;
 }
 
-.scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
-    -fx-shape: " ";
+.scroll-bar .increment-arrow,
+.scroll-bar .decrement-arrow {
+    -fx-background-color: transparent;
+    -fx-shape: ""; /* hides the arrows */
 }
 
-.scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
-    -fx-padding: 1 8 1 8;
-}
-
-.scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
-    -fx-padding: 8 1 8 1;
-}
 
 #cardPane {
     -fx-background-color: transparent;
